# Software-CourseWorks

./: .gitignore  README.md
CourseWork2/: CMakeLists.txt  ExpressionGenerator.cpp  MaxSubArray.cpp  README.md  main.cpp
CourseWork2/src/: MaxSubArray.cpp
CourseWork4/: CMakeLists.txt  README.md  main.cpp
CourseWork4/include/: Button.hpp  ExpressionGenerator.hpp  LogWindow.hpp  TextBox.hpp
CourseWork4/src/: Button.cpp  ExpressionGenerator.cpp  LogWindow.cpp  TextBox.cpp
